syntax = "proto3";
// protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. \
// --go-grpc_opt=paths=source_relative api/transactions/myserver.proto


option go_package = "./grpc_transactions";


service TransactionsGRPC{
  rpc CreateTransaction (CreateRequest) returns (CreateReply) {}
  rpc VerifyTransaction (VerifyRequest) returns (VerifyReplyGet) {}
}

message CreateRequest{
  repeated bytes args = 1;
  bytes privateKey = 2;
}
message CreateReply{
  bytes hash = 1;
  bytes publicKey = 2;
  bytes signature = 3;
}

message VerifyRequest{
  bytes hash = 1;
  bytes publicKey = 2;
  bytes signature = 3;
}

message VerifyReplyGet{
  bytes signatureValid = 1;
}
